[gd_scene load_steps=2 format=3 uid="uid://btvm7tatbqe07"]

[ext_resource type="Script" uid="uid://b1efb0mg4a6d2" path="res://scripts/tasks/addition_task.gd" id="1_unrrd"]

[node name="AdditionTask" type="Control"]
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_unrrd")

[node name="DebugBG" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1152.0
offset_bottom = 647.0
color = Color(0.709804, 0.862745, 0.886275, 0)

[node name="QuestionLabel" type="Label" parent="."]
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = 380.0
offset_right = 420.0
offset_bottom = 45.0
grow_horizontal = 2
theme_override_font_sizes/font_size = 32

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 172.0
offset_top = 304.0
offset_right = 669.0
offset_bottom = 364.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="Button1" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 3

[node name="Button3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(150, 60)
layout_mode = 2
size_flags_horizontal = 3
